// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`As Nav 1`] = `
<nav aria-label="Snarveier">
  <ul style="list-style: none; padding: 0px;">
    <li>
      <a
        href="https://www.udir.no/utdanningslopet/barnehage/"
        target="_blank"
      >
        Barnehage
      </a>
    </li>
    <li>
      <a
        href="https://www.udir.no/utdanningslopet/grunnskole/"
        target="_blank"
      >
        Grunnskole
      </a>
    </li>
    <li>
      <a
        href="https://www.udir.no/utdanningslopet/videregaende-opplaring/"
        target="_blank"
      >
        Videregående
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Indented 1`] = `
<h2 data-size="xs">
  Innhold
</h2>
<ol style="margin-top: var(--ds-size-2);">
  <li>
    Barnehagens verdigrunnlag
    <ul>
      <li>
        Barn og barndom
      </li>
      <li>
        Demokrati
      </li>
      <li>
        Mangfold og gjensidig respekt
      </li>
    </ul>
  </li>
  <li>
    Ansvar og roller
    <ul>
      <li>
        Barnehageeier
      </li>
      <li>
        Styrer
      </li>
      <li>
        Pedagogisk leder
      </li>
    </ul>
  </li>
  <li>
    Barnehagens formål og innhold
    <ul>
      <li>
        Barnehagen skal ivareta barnas behov for omsorg
      </li>
      <li>
        Barnehagen skal ivareta barnas behov for lek
      </li>
    </ul>
  </li>
</ol>
`;

exports[`Ordered 1`] = `
<h2
  data-size="xs"
  style="margin-bottom: var(--ds-size-2);"
>
  Slik gjennomfører dere metoden:
</h2>
<ol>
  <li>
    Presenter en problemstilling.
  </li>
  <li>
    Gå sammen to og to for å reflektere.
  </li>
  <li>
    Del innsikter og spørsmål i plenum.
  </li>
  <li>
    Noter ned viktige innspill og refleksjoner.
  </li>
</ol>
`;

exports[`Preview 1`] = `
<ul>
  <li>
    listepunkt 1
  </li>
  <li>
    listepunkt 2
  </li>
  <li>
    listepunkt 3
  </li>
</ul>
`;

exports[`Unordered 1`] = `
<h2
  data-size="xs"
  style="margin-bottom: var(--ds-size-2);"
>
  Gjennom arbeid med kommunikasjon, språk og tekst skal barnehagen bidra til at barna
</h2>
<ul>
  <li>
    uttrykker sine følelser, tanker, meninger og erfaringer på ulike måter
  </li>
  <li>
    bruker språk til å skape relasjoner, delta i lek og som redskap til å løse konflikter
  </li>
  <li>
    videreutvikler sin begrepsforståelse og bruker et variert ordforråd
  </li>
</ul>
`;

exports[`With Links 1`] = `
<ul style="list-style: none; padding: 0px;">
  <li>
    <a
      href="https://www.udir.no/om-udir/designprofil/identitet/"
      target="_blank"
    >
      Identitet
    </a>
  </li>
  <li>
    <a
      href="https://www.udir.no/om-udir/designprofil/farger/"
      target="_blank"
    >
      Farger
    </a>
  </li>
  <li>
    <a
      href="https://www.udir.no/om-udir/designprofil/typografi/"
      target="_blank"
    >
      Typografi
    </a>
  </li>
</ul>
`;
